# camera-test

./: .gitignore  README.md  config.hh  emak.ini  meson.build  meson_options.txt
src/: app.c  app.h  main.c  main.h
